@@ -7,6 +7,17 @@ use Env qw( @PATH );
 
 $ENV{VERBOSE} = 1;
 
+# Tests use fetch from local direcory, whidh is not
+# supported by check_digest
+if($ENV{ALIEN_DOWNLOAD_RULE} eq 'digest_and_encrypt')
+{
+  $ENV{ALIEN_DOWNLOAD_RULE} = 'digest_or_encrypt';
+}
+elsif($ENV{ALIEN_DOWNLOAD_RULE} eq 'digest')
+{
+  $ENV{ALIEN_DOWNLOAD_RULE} = 'warn';
+}
+
 {
   package Alien::MyDinoBase;;
   
